# projetofinal

./: README.md
ProjetoFinal/: CMakeLists.txt  README.md
ProjetoFinal/include/: aluno.h
ProjetoFinal/src/: aluno.c
include/: aluno.h
src/: RegistroAlunos.c  aluno.c
